--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="item_detail">Detalles</string>
     <string name="exit">Salir</string>
     <string name="test">Test</string>
-    <string name="void_string"></string>
+    <string name="editLastNameHint">Apellido</string>
+    <string name="editNameHint">Nombre</string>
+    <string name="buttonIngresarActor">Ingresar Actor</string>
 </resources>
