zDXVs{adf.v bljkasf sdcan {sdfb pld fC r´s{d{dc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,11 @@
     <string name="test">Test</string>
     <string name="editLastNameHint">Apellido</string>
     <string name="editNameHint">Nombre</string>
+    <string name="getNombre">Nombre</string>
+    <string name="getId">id</string>
+    <string name="getDetail">Update</string>
+    <string name="getNombreLabel">Nombre :</string>
+    <string name="getIdLabel">Id :</string>
+    <string name="getDetailLabel">Last Update :</string>
     <string name="buttonIngresarActor">Ingresar Actor</string>
 </resources>
